# chatgpt-powered-web-design-builder

./: .env.example  Cargo.toml  README.md
src/: communicate_with_chatgpt.rs  config.rs  direction_message.txt  lib.rs  main.rs  save_files.rs
test/: input.html  input.txt
