[package]
name = "output-design-by-chatgpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chatgpt_rs = "1.1.1"
dotenvy = "0.15.7"
strum = "0.24.1"
strum_macros = "0.24.3"
tokio = { version = "1.27.0", features = ["rt-multi-thread"] }
